<resources>
    <string name="app_name">Wakken en ijsberen</string>
    <string name="stringBtnSelectPlayer">Select Player</string>
    <string name="stringBtnPlay">Play</string>
    <string name="stringBtnPlayerScores">Player Scores</string>
    <string name="stringBtnRanking">Ranking</string>
    <string name="stringBtnCreateNewPlayer">Create New Player</string>
    <string name="stringTvSelectedPlayer">[Selected Player]</string>
    <string name="stringBtnSaveChanges">Save Changes</string>
    <string name="stringTvLevel">Level:</string>
    <string name="stringBtnCreatePlayer">Create Player</string>
    <string name="stringTvPlayerName">player Name:</string>
    <string name="stringTvAmountOfDobbles">Amount Of Dobbles:</string>
    <string name="stringTvPinguinsUse">Pinguïns on/off</string>
    <string name="stringTvAmountOfDobblesSettings">Amount Of Dobbles:</string>
    <string name="stringTvPinguinsUseSettings">Pinguïns on/off</string>
    <string name="stringTvIceHoles">Ice Holes:</string>
    <string name="stringTvPolarBears">Polar bears:</string>
    <string name="stringTvPinguins">Pinguïns:</string>
    <string name="stringTvTimer">Timer</string>
    <string name="stringTvWrong">Wrong</string>
    <string name="stringTvCorrect">Correct</string>
    <string name="stringBtnThrow">Throw!</string>
    <string name="stringBtnCheckAnswers">Check Answer</string>
    <string name="stringLvl2Unlocked">Level 2 has been unlocked!</string>
    <string name="stringLvl3Unlocked">Level 3 has been unlocked!</string>
    <string name="stringCorrect">Correct</string>
    <string name="stringWrong">Wrong</string>
    <string name="stringFillInInput">Please fill in the input!</string>
    <string name="stringMessageSelectPlayer">Select a player first</string>
    <string name="stringSaveSettings">Settings have been saved!</string>
    <string name="stringHint1">Er zijn alleen ijsberen en pinguïns bij wakken!</string>
    <string name="stringHint2">Voor elke worp 4, 5 en 6 is er een wak!</string>
    <string name="stringHint3">Ijsberen zijn de laagste ogen!</string>
    <string name="settings_String"></string>
    <string name="stringIbtnRevert"></string>
    <string name="stringTvWakken">Wakken:</string>
</resources>
