<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:text="@string/stringBtnPlay"
        android:layout_height="wrap_content"
        android:id="@+id/btnPlay_startFragment"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:alpha="0.75" />

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_manage"
        android:id="@+id/ibtnSettings_startFragment"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/settings_String"
        android:alpha="0.75"/>

    <Button
        android:text="@string/stringBtnPlayerScores"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnPlayerScores_startFragment"
        android:layout_below="@+id/btnPlay_startFragment"
        android:layout_alignLeft="@+id/btnPlay_startFragment"
        android:layout_alignStart="@+id/btnPlay_startFragment"
        android:alpha="0.75"/>

    <Button
        android:text="@string/stringBtnRanking"
        android:layout_height="wrap_content"
        android:id="@+id/btnRanking_startFragment"
        android:layout_width="150dp"
        android:layout_below="@+id/btnPlayerScores_startFragment"
        android:layout_alignLeft="@+id/btnPlayerScores_startFragment"
        android:layout_alignStart="@+id/btnPlayerScores_startFragment"
        android:alpha="0.75"/>

    <TextView
        android:text="@string/stringTvSelectedPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSelectedPlayer_startFragment"
        android:layout_marginBottom="44dp"
        android:layout_above="@+id/btnSelectPlayer_startFragment"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/stringBtnSelectPlayer"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnSelectPlayer_startFragment"
        android:layout_above="@+id/btnPlay_startFragment"
        android:layout_alignLeft="@+id/btnPlay_startFragment"
        android:layout_alignStart="@+id/btnPlay_startFragment"
        android:alpha="0.75"/>

</RelativeLayout>